fix(firebase): cleanup auth and calendar code

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,13 +1,6 @@
 {
   "header": {
-    "title": "Sign Language Detector",
-    "signIn": "Sign In",
-    "signOut": "Sign out"
-  },
-  "calendar": {
-    "title": "Calendar",
-    "today": "Today",
-    "tomorrow": "Tomorrow"
+    "title": "Sign Language Detector"
   },
   "settings": {
     "shareData": "Help us improve this service"
